--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src", "env.d.ts"]
+  "include": ["src", "src/types/env.d.ts"]
 }
