--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "todo-backend",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "lint": "eslint ."
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -18,7 +17,6 @@
     "ms": "^2.1.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
@@ -26,12 +24,8 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.5.7",
     "eslint": "^9.39.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.5.0",
-    "jiti": "^2.6.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.1",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2"
+    "typescript": "^5.9.3"
   }
 }
