--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "eslint . --ext .ts,.tsx,.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -23,7 +24,10 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.5.7",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.39.0",
+    "globals": "^16.5.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.1",
     "typescript": "^5.9.3"
