--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint . --ext .ts,.tsx,.js"
+    "lint": "eslint ."
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
