--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.57.1",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.3.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
